@@ -1,3 +1,8 @@
+2006-11-14  Jakub Jelinek  <jakub@redhat.com>
+
+	* nss/nss_files/files-alias.c (get_next_alias): Set line back
+	to first_unused after parsing :include: file.
+
 2006-11-14  Ulrich Drepper  <drepper@redhat.com>
 
 	* po/nl.po: Update from translation team.
